Fixed commas on oracle statements and simplified template code.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7040 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/src/sql/base/oracle/tablefk.vm
+++ b/impex/src/sql/base/oracle/tablefk.vm
@@ -14,7 +14,4 @@
 ## KIND, either express or implied.  See the License for the
 ## specific language governing permissions and limitations
 ## under the License.
-#set ( $fk = $generator.parse("$basepath/foreignkey.vm", "", "table", $tbl) )
-#if ($fk.length()>0)$fk#end
-
-
+$generator.parse("$basepath/foreignkey.vm", "", "table", $tbl)
