--- a/impex/src/sql/base/oracle/table.vm
+++ b/impex/src/sql/base/oracle/table.vm
@@ -21,18 +21,13 @@
 $generator.parse("$basepath/drop.vm", "", "table", $tbl)
 CREATE TABLE $table.Name
 (
-#set ( $cols = $generator.parse("$basepath/columns.vm", "", "table", $tbl) )
-#set ( $unique = $generator.parse("$basepath/unique.vm", "", "table", $tbl) )
-#if($strings.allEmpty([$unique]))$strings.chop($cols,2)#else$cols#end
-#if($unique.length()>0)$strings.chop($unique,2)#end
-
+$generator.parse("$basepath/columns.vm", "", "table", $tbl)
+$generator.parse("$basepath/unique.vm", "", "table", $tbl)
 )
 /
 
-#set ( $pk = $generator.parse("$basepath/primarykey.vm", "", "table", $tbl) )
-#if($pk.length()>0)$pk#end
+$generator.parse("$basepath/primarykey.vm", "", "table", $tbl)
 
-#set ( $index = $generator.parse("$basepath/index.vm", "", "table", $tbl) )
-#if($index.length() > 0)$index#end
+$generator.parse("$basepath/index.vm", "", "table", $tbl)
 
 $generator.parse("$basepath/comment.vm", "", "table", $tbl)
