--- a/impex/src/sql/base/oracle/unique.vm
+++ b/impex/src/sql/base/oracle/unique.vm
@@ -15,5 +15,5 @@
 ## specific language governing permissions and limitations
 ## under the License.
 #foreach ($unique in $table.Unices)
-    CONSTRAINT $unique.Name UNIQUE ($unique.ColumnList),
+    , CONSTRAINT $unique.Name UNIQUE ($unique.ColumnList)
 #end
