Updated MySQL files for comma issue as well.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7042 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/src/sql/base/mysql/primarykey.vm
+++ b/impex/src/sql/base/mysql/primarykey.vm
@@ -17,5 +17,5 @@
 #if ($table.hasPrimaryKey())
 #set ($length = $table.Name.length())
 #if ($length > 27)#set ($length=27)#end
-    CONSTRAINT ${table.Name.substring(0,$length)}P1 PRIMARY KEY($table.printPrimaryKey()),
+    , CONSTRAINT ${table.Name.substring(0,$length)}P1 PRIMARY KEY($table.printPrimaryKey())
 #end
