--- a/impex/src/sql/base/mysql/columns.vm
+++ b/impex/src/sql/base/mysql/columns.vm
@@ -14,7 +14,8 @@
 ## KIND, either express or implied.  See the License for the
 ## specific language governing permissions and limitations
 ## under the License.
+#set ( $comma = " " )
 #foreach ($col in $table.Columns)
-    #set ( $entry = "$col.SqlString," )
-    $strings.sub($strings.collapseSpaces($entry)," ,",",")
+    $comma $strings.collapseSpaces($col.SqlString)
+    #set ( $comma = "," )
 #end
