--- a/impex/src/sql/base/mysql/index.vm
+++ b/impex/src/sql/base/mysql/index.vm
@@ -15,5 +15,5 @@
 ## specific language governing permissions and limitations
 ## under the License.
 #foreach ($index in $table.Indices)
-    INDEX $index.Name ($index.ColumnList),
+    , INDEX $index.Name ($index.ColumnList)
 #end
