Readding previously removed apache source.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/kul-handle_dollar_signs_in_tables-br@7082 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/src/sql/load/Control.vm
+++ b/impex/src/sql/load/Control.vm
@@ -17,6 +17,7 @@
 #set ($fname= "sql/load/${targetDatabase}/row.vm")
 #set ($purgefname= "sql/load/${targetDatabase}/purge.vm")
 
+##$task.substituteValidTableName($data.get(0).Table)
 #set ($currTable = ${data.get(0).Table.Name})
 $generator.parse($purgefname,$outputFile,"currTable",$currTable)
 
