BFN: Re-wrote template for nested structure.  Created  /BFN/bud-personnel-dc-BFN05.html as discussion demo for 'personnel' budget form re-organization [JIRA KRAFDBCK-1585] and also for template and slider discussion.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6219 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/cleancode.css
+++ b/BFN/cleancode.css
@@ -12,6 +12,7 @@
 	background-image:none;
 	height:18px;
 	color:#FFFFFF;
+	text-align:left;
 }
 
 #workarea .elementcontent, .subelementcontent, .expsubelementcontent
@@ -25,6 +26,7 @@
 	background-image:none;
 	height:18px;
 	color:#FFFFFF;
+	text-align:left;
 }
 
 #workarea .subelementcontainer
@@ -56,13 +58,20 @@
 
 #workarea .elementtable input
 {
-	width:100%;
+	width:98%;
 }
 
-/*
+#workarea .elementtable select
+{
+	width:98%;
+	border-color:#666666 #CCCCCC #CCCCCC #666666;
+	border-style:solid;
+	border-width:1px;
+	font-size:100%;
+}
+
+
 #workarea .elementtable td, th
 {
-	border: solid 1px;
-	padding:0px;
+	text-align:center;
 }
-*/
