BFN Updates for Hierarchy Mocks
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6235 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/new_kuali.css
+++ b/BFN/new_kuali.css
@@ -28,22 +28,22 @@
 	a:link
 	{
 		color: #000000;
-		text-decoration: underline;
+		text-decoration:none;
 	}
 	a:visited
 	{
 		color: #333333;
-		text-decoration: underline;
+		text-decoration: none;
 	}
 	a:hover
 	{
 		color: #990000;
-		text-decoration: underline;
+		text-decoration: none;
 	}
 	a:active
 	{
 		color: #333333;
-		text-decoration: underline;
+		text-decoration: none;
 	}
 
 /*FORM CONTROLS*/
@@ -386,6 +386,16 @@
 	.elementtable td, th
 	{
 		text-align:center;
+	}
+	.hierarchydetail
+	{
+		background-image:url("../images/th-back.gif");
+		/*border-top: solid #939393 1px;
+		border-bottom: solid #939393 1px;
+		border-right: solid #939393 1px;
+		border-left: solid #939393 1px;*/
+		/*padding:2px;*/
+		margin-left:2px;
 	}
 
 /*CLASS CALLS*/
