[BFN] Nested Template Design including a new tabbed header design.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6265 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/new_kuali.css
+++ b/BFN/new_kuali.css
@@ -131,8 +131,9 @@
 	{
 		background-color:#D8D8D8;
 		width:100%;
-		background-position:bottom;
+		/*background-position:bottom;*/
 		background:url(./images/tabnav-divbg.gif);
+		
 	}
 	.horizontaltabstable
 	{
@@ -387,6 +388,11 @@
 		padding-right:3px;
 		padding-left:10px;
 		padding-bottom:10px;
+	}
+	
+	.subelementheader
+	{
+		border-left:1px solid #939393;
 	}
 	
 	.subelementheader,.expsubelementcontrol
