[BFN] Questionnaire updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6423 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire.css
+++ b/BFN/questionnaire.css
@@ -60,6 +60,11 @@
 		
 	}
 
+.sectionpage
+{
+	text-align:center;
+}
+
 /*<div class="Qdiv" id="QID001">
 	<div class="Qquestiondiv">
 		<span class="Qnumber">1.0.0</span>
