--- a/BFN/new_kuali.css
+++ b/BFN/new_kuali.css
@@ -24,26 +24,31 @@
 	img
 	{
 		border: 0px none;
+		outline: none;
 	}
 	a:link
 	{
 		color: #000000;
 		text-decoration:none;
+		outline: none;
 	}
 	a:visited
 	{
 		color: #333333;
 		text-decoration: none;
+		outline: none;
 	}
 	a:hover
 	{
 		color: #990000;
 		text-decoration: none;
+		outline: none;
 	}
 	a:active
 	{
 		color: #333333;
 		text-decoration: none;
+		outline: none;
 	}
 
 /*FORM CONTROLS*/
@@ -55,6 +60,7 @@
 		border-bottom: 1px solid #888888;
 		border-left: 1px solid #888888;
 		font-size:11px;
+		outline: none;
 	}
 	input.radio
 	{
@@ -63,6 +69,7 @@
 		padding-left: 5px;
 		border: 0px;
 		vertical-align: middle;
+		outline: none;
 	}
 	.noborder
 	{
