[BFN] Questionnaire mocks.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6447 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/css/kuali-stylesheet.css
+++ b/css/kuali-stylesheet.css
@@ -568,7 +568,7 @@
 	}
 	.content_info
 	{
-		background-image: url("../images/th-back1.gif") no-repeat;
+		background-image: url("../images/th-back1.gif"); no-repeat;
 		background-size: 100%;
 		background-position: bottom;
 		border-top: solid #939393 0px;
