[BFN] KRAFUNC-183 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6522 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/css/kuali.css
+++ b/css/kuali.css
@@ -1039,3 +1039,10 @@ td.infoline
 	clear: both;
 	line-height: 1%;
 }
+
+.lihover
+{
+	background:#ff0000;
+	background-image:url(file:///C|/!BFN/Pics/20080701%20Jeeps/FiveRigsNorthFarm.jpg)
+	color:#0F0;
+}
