[BFN] KRAFUNC-217 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6619 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/css/kuali.css
+++ b/css/kuali.css
@@ -1046,3 +1046,8 @@ td.infoline
 	background-image:url(file:///C|/!BFN/Pics/20080701%20Jeeps/FiveRigsNorthFarm.jpg)
 	color:#0F0;
 }
+
+.compare td, .compare th
+{
+	color:#666666;
+}
