[BFN] https://test.kuali.org/jira/browse/KRAFUNC-87 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6745 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/new_kuali.css
+++ b/BFN/new_kuali.css
@@ -418,3 +418,21 @@
 	{
 		text-align:right;
 	}
+	
+	
+	
+	.paneme td, .paneme th, .paneme tr
+	{
+		border-collapse:collapse;
+		border:1px solid #939393;
+	}
+	.paneme td, .paneme th
+	{
+		padding:3px;
+	}
+	.panemelabel
+	{
+		background-color:#CCC;
+		text-align:right;
+	}
+	
