Intended to eliminate constraint errors if DB is not empty at time of import; cleared with Jonathan
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7134 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/src/sql/base/mysql/drop.vm
+++ b/impex/src/sql/base/mysql/drop.vm
@@ -14,5 +14,6 @@
 ## KIND, either express or implied.  See the License for the
 ## specific language governing permissions and limitations
 ## under the License.
+set foreign_key_checks = 0;
 drop table if exists $table.Name
 /
