BR Mock Update: Condition Editor.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6899 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/businessrules.css
+++ b/BFN/businessrules.css
@@ -172,3 +172,10 @@ td.agendacontent
 	border: 1px solid #666;	
 	border-collapse:collapse;	
 }
+
+.hilitepart
+{
+	border:1px solid #F00;
+	background-color:#FFC;
+	padding:2px;
+}
