Got import working for MySQL.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/comment-extraction@7229 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/src/sql/base/mysql/table.vm
+++ b/impex/src/sql/base/mysql/table.vm
@@ -27,4 +27,7 @@ $generator.parse("$basepath/unique.vm", '', "table", $tbl)
 $generator.parse("$basepath/index.vm", '', "table", $tbl)
 ) ENGINE InnoDB CHARACTER SET utf8 COLLATE utf8_bin
 /
-
+#if( $table.hasComment() )
+ALTER TABLE $table.Name COMMENT = '$table.Comment'
+/
+#end
