--- a/css/kuali-stylesheet.css
+++ b/css/kuali-stylesheet.css
@@ -553,6 +553,33 @@
 		font-weight:bold;
 		text-align:right;
 	}
+	
+	.content_whitealt
+	{
+		background-color:#f5f5f5;
+		border-top: solid #939393 0px;
+		border-bottom: solid #939393 1px;
+		border-left: solid #939393 1px;
+		border-right: solid #939393 1px;
+		padding-top:3px;
+		padding-right:3px;
+		padding-left:3px;
+		padding-bottom:3px;
+	}
+	.content_greyalt
+	{
+		background-color:#dbdadb;
+		border-top: solid #939393 0px;
+		border-bottom: solid #939393 1px;
+		border-left: solid #939393 1px;
+		border-right: solid #939393 1px;
+		padding-top:3px;
+		padding-right:3px;
+		padding-left:3px;
+		padding-bottom:3px;
+		font-weight:bold;
+		text-align:right;
+	}
 	.content_subhead
 	{
 		background-color:#C3C3C3;
@@ -569,6 +596,21 @@
 	.content_gradient
 	{
 		background-image: url("../images/gradientbg.png");
+		background-size: 100% 100%;
+		border-top: solid #939393 0px;
+		border-bottom: solid #939393 1px;
+		border-left: solid #939393 1px;
+		border-right: solid #939393 1px;
+		padding-top:3px;
+		padding-right:3px;
+		padding-left:3px;
+		padding-bottom:3px;
+		background-color:#c3c3c3;
+		font-weight:bold;
+	}
+	.content_gradientalt
+	{
+		background-image: url("../images/gradientbgalt.png");
 		background-size: 100% 100%;
 		border-top: solid #939393 0px;
 		border-bottom: solid #939393 1px;
