--- a/maven-kuali-skin/src/main/resources/META-INF/maven/site.vm
+++ b/maven-kuali-skin/src/main/resources/META-INF/maven/site.vm
@@ -488,7 +488,7 @@
       <hr/>
     </div>
     <div id="footer">
-      <div class="xright">&#169;#copyright()#publishDate( "bottom" $decoration.publishDate $decoration.version ) - <a href="http://maven.apache.org/privacy-policy.html">Privacy Policy</a></div>
+      <div class="xright">&#169;#copyright()#publishDate( "bottom" $decoration.publishDate $decoration.version )</div>
       <div class="clear">
         <hr/>
       </div>
