git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3123 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-kuali-skin/src/main/resources/META-INF/maven/site.vm
+++ b/maven-kuali-skin/src/main/resources/META-INF/maven/site.vm
@@ -466,7 +466,7 @@
     </div>
     <div id="breadcrumbs">
       #publishDate( "left" $decoration.publishDate $decoration.version )
-      <div class="xright">#links( $decoration.body.links )#publishDate( "right" $decoration.publishDate $decoration.version )</div>
+      <div class="xright"><span class="xrighttop">#links( $decoration.body.links )#publishDate( "right" $decoration.publishDate $decoration.version )<span></div>
       <div class="clear">
         <hr/>
       </div>
